test/should-fail/vsgc3395.visage
/**
 * Regress test for VSGC-3395: An internal error has occurred in the Visage compiler
 *
 * @test/compile-error
 */

var s:String;
vsgc3395{s:""};
